force-app/main/default/objects/Dispute_Case__c/Dispute_Case__c.object-meta.xml
<CustomObject>
    <label>Dispute Case</label>
    <pluralLabel>Dispute Cases</pluralLabel>
    <description>Object used to manage credit card dispute cases with OCR receipt processing and provisional credit tracking within the banking system.</description>
    <nameField>
        <label>Dispute Case Number</label>
        <type>AutoNumber</type>
        <displayFormat>DISP-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>