force-app/main/default/objects/Dispute_Case__c/fields/Dispute_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Amount__c</fullName>
    <label>Dispute Amount</label>
    <description>The amount being disputed by the customer in INR</description>
    <inlineHelpText>Enter the disputed amount. This should match the transaction amount for full disputes.</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>