force-app/main/default/objects/Dispute_Case__c/fields/OCR_Extracted_Data__c.field-meta.xml
<CustomField>
    <fullName>OCR_Extracted_Data__c</fullName>
    <label>OCR Extracted Data</label>
    <description>Data extracted from receipt photos using Einstein OCR for dispute validation</description>
    <inlineHelpText>Automatically populated with merchant name, date, and amount extracted from uploaded receipt images</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>