force-app/main/default/objects/Dispute_Case__c/fields/Provisional_Credit_Issued__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Credit_Issued__c</fullName>
    <label>Provisional Credit Issued</label>
    <description>Indicates whether provisional credit has been issued to the customer while the dispute is under investigation</description>
    <inlineHelpText>Check this box when provisional credit is issued to prevent interest charges during investigation</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>