force-app/main/default/objects/Dispute_Case__c/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <label>Resolution Status</label>
    <description>Current stage of the dispute resolution process</description>
    <inlineHelpText>Track the dispute through investigation stages: New, Under Review, Merchant Response Pending, Resolved Approved, or Resolved Denied</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Merchant Response Pending</fullName>
            </value>
            <value>
                <fullName>Resolved - Approved</fullName>
            </value>
            <value>
                <fullName>Resolved - Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>