force-app/main/default/objects/Dispute_Case__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction</label>
    <description>Link to the credit card transaction being disputed</description>
    <inlineHelpText>Select the specific transaction that is being disputed by the customer</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Credit_Card_Transaction__c</referenceTo>
    <relationshipLabel>Dispute Cases</relationshipLabel>
    <relationshipName>Dispute_Cases</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>